[package]
name = "minimal_web"
version = "0.1.0"
edition = "2021"
description = "A minimal tool for build web-page easier using Rust"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
# We need to enable all the web-sys features we want to use!
features = [
    "Location",
    "Attr",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlSlotElement",
    "NodeList",
    "Window",
    "Node",
    "CssStyleDeclaration",
]